Updated AirExport and Import

--- a/src/app/airexport/airexport/airexport-edit/airexport-edit.component.html
+++ b/src/app/airexport/airexport/airexport-edit/airexport-edit.component.html
@@ -308,21 +308,18 @@
             <div class="d-grid gap-1">
               <button class="btn btn-success btn-sm">PRINT MAWB</button>
               <button class="btn btn-success btn-sm">MANIFEST</button>
-              <button class="btn btn-success btn-sm">AR & AP</button>
-              <button class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/messengerslipList"
-                [queryParams]="{id : 0 ,mode:'add', menuid:'MESSENGERSLIP', type:'MESSENGERSLIP',parent_type:'GENERAL', appid: appid,
-                mbl_id: 0, mbl_refno: ''}">PROFIT REPORT
-              </button>
+              <button class="btn btn-success btn-sm" type="button">AR & AP</button>
+              <button class="btn btn-success btn-sm" type="button">PROFIT REPORT</button>
               <button class="btn btn-success btn-sm">SHIPMENT LABEL</button>
-              <button class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/messengerslipList"
-                [queryParams]="{id : 0 ,mode:'add', menuid:'MESSENGERSLIP', type:'MESSENGERSLIP',parent_type:mform.get('mbl_mode')?.value, appid: appid,
-                mbl_id: mform.get('mbl_id')?.value, mbl_refno: mform.get('mbl_refno')?.value}">MESSENGER SLIP
+              <button class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/messengerslipDetList"
+                [queryParams]="{id : 0 ,mode:'add', menuid:'MESSENGER-SLIP', type:'MESSENGER-SLIP', appid: appid, parent_id: mform.get('mbl_id')?.value, parent_type:mform.get('mbl_mode')?.value}">MESSENGER
+                SLIP
               </button>
               <button class="btn btn-success btn-sm">PAYMENT REQUEST</button>
               <button class="btn btn-success btn-sm">ATTACHMENTS</button>
               <button class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/followupEdit"
-                [queryParams]="{id : 0 ,mode:'add', menuid:'FOLLOWUP', type:'FOLLOWUP',parent_type:mform.get('mbl_mode')?.value, appid: appid, mbl_id: mform.get('mbl_id')?.value,
-                mbl_refno: mform.get('mbl_refno')?.value, mbl_ref_date: mform.get('mbl_ref_date')?.value}">ADD TO
+                [queryParams]="{id : 0 ,mode:'add', menuid:'FOLLOWUP', type:'FOLLOWUP', appid: appid, parent_id: mform.get('mbl_id')?.value,parent_type:mform.get('mbl_mode')?.value}">ADD
+                TO
                 FOLLOW UP
               </button>
               <button class="btn btn-success btn-sm" routerLink="/common-shipment/memoEdit"
