--- a/src/app/common-shipment/followup/followup-edit/followup-edit.component.html
+++ b/src/app/common-shipment/followup/followup-edit/followup-edit.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm-12">
       <div class="page-header">
         <h5>Follow Up</h5>
-        <app-history [inputdata]="{ table: 'cargo_followup', id: mbl_id  }"></app-history>
+        <app-history [inputdata]="{ table: 'cargo_followup', id: parent_id  }"></app-history>
         <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
       </div>
 
