--- a/src/app/common-shipment/messengerslip/messengerslip-search/messengerslip-search.component.html
+++ b/src/app/common-shipment/messengerslip/messengerslip-search/messengerslip-search.component.html
@@ -4,12 +4,12 @@
       <div class="form-group row">
         <label class="col-sm-4 form-label form-lable-sm">From</label>
         <div class="col-sm-3">
-          <app-date maxlength="100" formControlName="cs_from_date" [format]="gs.globalConstants.global_date_format"
+          <app-date formControlName="cs_from_date" [format]="gs.globalConstants.global_date_format"
             [placeholder]="gs.globalConstants.global_date_format"></app-date>
         </div>
         <label class="col-sm-2 form-label form-lable-sm">To</label>
         <div class="col-sm-3">
-          <app-date maxlength="100" formControlName="cs_to_date" [format]="gs.globalConstants.global_date_format"
+          <app-date formControlName="cs_to_date" [format]="gs.globalConstants.global_date_format"
             [placeholder]="gs.globalConstants.global_date_format"></app-date>
         </div>
       </div>
