--- a/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
+++ b/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
@@ -319,13 +319,14 @@
               <button class="btn btn-success btn-sm">AR & AP</button>
               <button class="btn btn-success btn-sm">PROFIT REPORT</button>
               <button class="btn btn-success btn-sm">SHIPMENT LABEL</button>
-              <button class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/messengerslipList"
-                [queryParams]="{id : 0 ,mode:'add', menuid:'MESSENGERSLIP', type:'MESSENGERSLIP',parent_type:mform.get('mbl_mode')?.value, appid: appid, mbl_id: mform.get('mbl_id')?.value, mbl_refno: mform.get('mbl_refno')?.value}">MESSENGER
+              <button class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/messengerslipDetList"
+                [queryParams]="{id : 0 ,mode:'add', menuid:'MESSENGER-SLIP', type:'MESSENGER-SLIP', appid: appid,
+                parent_id: mform.get('mbl_id')?.value,parent_type:mform.get('mbl_mode')?.value}">MESSENGER
                 SLIP</button>
               <button class="btn btn-success btn-sm">PAYMENT REQUEST</button>
               <button class="btn btn-success btn-sm">ATTACHMENTS</button>
               <button class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/followupEdit"
-                [queryParams]="{id : 0 ,mode:'add', menuid:'FOLLOWUP', type:'FOLLOWUP', appid: appid, mbl_id: mform.get('mbl_id')?.value, mbl_refno: mform.get('mbl_refno')?.value, mbl_ref_date: mform.get('mbl_ref_date')?.value}">ADD
+                [queryParams]="{id : 0 ,mode:'add', menuid:'FOLLOWUP', type:'FOLLOWUP', appid: appid, parent_id: mform.get('mbl_id')?.value, parent_type:mform.get('mbl_mode')?.value}">ADD
                 TO FOLLOW UP</button>
               <button class="btn btn-success btn-sm" routerLink="/common-shipment/memoEdit"
                 [queryParams]="{ id:0, parent_id: mform.get('mbl_id')?.value,parent_type:'AIRIMP-CNTR-MEMO', mode: 'add',menuid:'MEMO', type: 'MEMO', appid: appid}">INTERNAL
