--- a/src/app/airexport/airexport/airexport-edit/airexport-edit.component.html
+++ b/src/app/airexport/airexport/airexport-edit/airexport-edit.component.html
@@ -316,7 +316,7 @@
                 SLIP
               </button>
               <button class="btn btn-success btn-sm">PAYMENT REQUEST</button>
-              <button class="btn btn-success btn-sm">ATTACHMENTS</button>
+              <app-fileupload [inputdata]="{mode:'add', id:id, parent_type: 'AIR EXPORT'}"></app-fileupload>
               <button class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/followupEdit"
                 [queryParams]="{id : 0 ,mode:'add', menuid:'FOLLOWUP', type:'FOLLOWUP', appid: appid, parent_id: mform.get('mbl_id')?.value,parent_type:mform.get('mbl_mode')?.value}">ADD
                 TO
