--- a/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
+++ b/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
@@ -6,6 +6,7 @@
         <button *ngIf="bAdd" class="btn btn-sm btn-success" type="button" routerLink="/airimport/airimportEdit"
           [queryParams]="{id :0, _id:id+1,mode:'add',menuid:menuid,type:type,appid:appid}">New</button>
         <app-history [inputdata]="{table: 'cargo_masterm', id:id}"></app-history>
+        <app-fileupload [inputdata]="{mode: 'add', id:id, parent_type: 'AIR IMPORT'}"></app-fileupload>
         <button class="btn btn-success btn-sm" type="button" (click)="return2Parent()">Return</button>
       </div>
       <div class="page-body">
@@ -324,7 +325,7 @@
                 parent_id: mform.get('mbl_id')?.value,parent_type:mform.get('mbl_mode')?.value}">MESSENGER
                 SLIP</button>
               <button class="btn btn-success btn-sm">PAYMENT REQUEST</button>
-              <button class="btn btn-success btn-sm">ATTACHMENTS</button>
+              <app-fileupload [inputdata]="{mode:'add', id:id, parent_type: 'AIR IMPORT'}"></app-fileupload>
               <button class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/followupEdit"
                 [queryParams]="{id : 0 ,mode:'add', menuid:'FOLLOWUP', type:'FOLLOWUP', appid: appid, parent_id: mform.get('mbl_id')?.value, parent_type:mform.get('mbl_mode')?.value}">ADD
                 TO FOLLOW UP</button>
