--- a/src/app/seaimport/seaimportm/seaimportm-edit/seaimportm-edit.component.html
+++ b/src/app/seaimport/seaimportm/seaimportm-edit/seaimportm-edit.component.html
@@ -33,7 +33,7 @@
               <label class="col-sm-4 form-label form-lable-sm" for="">Stage</label>
               <div class="col-sm-8">
                 <auto-complete formControlName="mbl_shipment_stage_name" id="mbl_shipment_stage_name"
-                  (CallBack)="callBack($event)" [table]="'param'" [subtable]="'shipstage oe'"
+                  (CallBack)="callBack($event)" [table]="'param'" [subtable]="'shipstage oi'"
                   [company_id]="getCompanyId()" [url]="url"
                   display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]">
                 </auto-complete>
