--- a/src/app/airexport/airexport/airexport-search/airexport-search.component.html
+++ b/src/app/airexport/airexport/airexport-search/airexport-search.component.html
@@ -15,7 +15,7 @@
         </div>
       </div>
       <div class="form-group row">
-        <label class="col-sm-4 form-label form-label-sm" for="">RefNo#</label>
+        <label class="col-sm-4 form-label form-label-sm" for="">Ref No</label>
         <div class="col-sm-8">
           <app-input type="text" formControlName="mbl_refno" [case]="'UPPER'"> </app-input>
         </div>
