--- a/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
+++ b/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
@@ -12,7 +12,7 @@
         <div class="row">
           <div class="col-sm-6">
             <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm" for="">Ref No#</label>
+              <label class="col-sm-4 form-label form-lable-sm" for="">Ref No</label>
               <div class="col-sm-8">
                 <app-input maxlength="15" formControlName="mbl_refno" [disable]="true"></app-input>
               </div>
@@ -324,7 +324,8 @@
                 parent_id: mform.get('mbl_id')?.value,parent_type:mform.get('mbl_mode')?.value}">MESSENGER
                 SLIP</button>
               <button class="btn btn-success btn-sm">PAYMENT REQUEST</button>
-              <app-fileupload [inputdata]="{mode:'add', id:id, parent_type: 'AIR IMPORT'}"></app-fileupload>
+              <app-fileupload
+                [inputdata]="{mode:'add', id:id, parent_type: 'AIR IMPORT', rec_files_count: mform.get('rec_files_count')?.value, rec_files_attached: mform.get('rec_files_attached')?.value}"></app-fileupload>
               <button class="btn btn-success btn-sm" type="button" routerLink="/common-shipment/followupEdit"
                 [queryParams]="{id : 0 ,mode:'add', menuid:'FOLLOWUP', type:'FOLLOWUP', appid: appid, parent_id: mform.get('mbl_id')?.value, parent_type:mform.get('mbl_mode')?.value}">ADD
                 TO FOLLOW UP</button>
