--- a/src/app/airimport/airimporth/airimporth-search/airimporth-search.component.html
+++ b/src/app/airimport/airimporth/airimporth-search/airimporth-search.component.html
@@ -15,7 +15,7 @@
         </div>
       </div>
       <div class="form-group row">
-        <label class="col-sm-4 form-label form-label-sm" for="">House No#</label>
+        <label class="col-sm-4 form-label form-label-sm" for="">House No</label>
         <div class="col-sm-8">
           <app-input type="text" formControlName="hbl_houseno" [case]="'UPPER'"> </app-input>
         </div>
