--- a/src/app/common-shipment/messengerslip/messengerslip-search/messengerslip-search.component.html
+++ b/src/app/common-shipment/messengerslip/messengerslip-search/messengerslip-search.component.html
@@ -14,7 +14,7 @@
         </div>
       </div>
       <div class="form-group row">
-        <label class="col-sm-4 form-label form-label-sm" for="">Refno#</label>
+        <label class="col-sm-4 form-label form-label-sm" for="">Ref No</label>
         <div class="col-sm-8">
           <app-input type="text" formControlName="cs_refno" [case]="'UPPER'"> </app-input>
         </div>
