--- a/src/app/marketing1/qtnmair/qtnmair-edit/qtnmair-edit.component.html
+++ b/src/app/marketing1/qtnmair/qtnmair-edit/qtnmair-edit.component.html
@@ -221,6 +221,7 @@
 
 <div class="page-footer line-bottom ">
   <button *ngIf="bAdd || bEdit" class="btn btn-sm btn-success" (click)="save()" [disabled]="mform.invalid">Save</button>
+  <app-fileupload [inputdata]="{mode:'add', id:id, parent_type: 'AIR'}"></app-fileupload>
 </div>
 
 
