--- a/src/app/marketing1/qtnmlcl/qtnmlcl-edit/qtnmlcl-edit.component.html
+++ b/src/app/marketing1/qtnmlcl/qtnmlcl-edit/qtnmlcl-edit.component.html
@@ -271,6 +271,7 @@
 
 <div class="page-footer line-bottom">
   <button *ngIf="bAdd || bEdit" class="btn btn-sm btn-success" (click)="save()" [disabled]="mform.invalid">Save</button>
+  <app-fileupload [inputdata]="{mode:'add', id:id, parent_type: 'LCL'}"></app-fileupload>
 </div>
 
 
